[package]
name = "rash_loader_sb3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip-extract = "*"
serde = { version = "*", features = ["serde_derive"] }
serde_json = "*"
tempfile = "*"
rash_vm = { path = "../rash_vm" }
