[package]
name = "rash_render"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
env_logger = "0.10"
log = "0.4"
wgpu = "22"
bytemuck = { version = "1.20.0", features = ["derive"] }
image = "0.25"
anyhow = { version = "1", features = ["backtrace"] }

# SVG loading
serde = "1"
serde-xml-rs = "0.7"
usvg-text-layout = "0.29"
usvg = "0.29"
resvg = "0.29"
tiny-skia = "0.8"
