[package]
name = "rash_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = { version = "0.89", optional = true }
target-lexicon = { version = "0.12", optional = true }

[features]
default = ["jit"]
jit = ["dep:cranelift", "dep:target-lexicon"]

[profile.release]
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]
