[package]
name = "rash_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For JIT compiling
cranelift = "0.113"
target-lexicon = "0.12"
memmap2 = "0.9"

colored = "2"
lazy_static = "1"
rand = "0.8"
ordered-float = "4.5.0"
